--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -41,7 +41,6 @@
   }
 
   .contract {
-
     &-title {
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -67,7 +66,7 @@
 
 .user-intro {
   padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
-  background: var(--td-brand-color);
+  // background: var(--td-brand-color);
   border-radius: var(--td-radius-medium);
   color: var(--td-text-color-primary);
 
@@ -142,13 +141,14 @@
   :deep(.t-card__header) {
     padding: 0;
   }
-  
+
   :deep(.t-card__body) {
     padding: 0;
   }
 
   .card-padding-no {
     margin-top: var(--td-comp-margin-xxxl);
+
     :deep(.t-card__body) {
       margin-top: var(--td-comp-margin-xxl);
     }
